[package]
name = "bic_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
error-chain = "0.12.4"
reqwest = "0.11.13"
serde_json = "1.0.91"
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
xmltojson = "0.1.1"
zip = "0.6.3"
